--- a/build.gradle
+++ b/build.gradle
@@ -5,25 +5,17 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.1.1'
-
+        classpath 'com.android.tools.build:gradle:1.3.0'
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1"
+        classpath 'me.tatarka:gradle-retrolambda:3.2.1'
+        classpath 'com.getkeepsafe.dexcount:dexcount-gradle-plugin:0.2.1'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
 }
 
 allprojects {
-    version = VERSION_NAME
-    group = GROUP
-
     repositories {
         jcenter()
-        maven {
-            url "https://oss.sonatype.org/content/repositories/snapshots/"
-        }
     }
-}
-
-def isReleaseBuild() {
-    return version.contains("SNAPSHOT") == false
 }
