--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,9 @@
-buildscript {
-    repositories {
-        jcenter()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
-    }
-}
 apply plugin: 'com.android.application'
-
-repositories {
-    jcenter()
-}
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
 
     defaultConfig {
         applicationId "com.dd.realmsample"
