--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,10 @@ buildscript {
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:1.3.1'
+        classpath "io.realm:realm-gradle-plugin:0.87.4"
+        classpath 'com.android.tools.build:gradle:1.5.0'
         classpath "org.jfrog.buildinfo:build-info-extractor-gradle:3.1.1"
-        classpath 'me.tatarka:gradle-retrolambda:3.2.1'
+        classpath 'me.tatarka:gradle-retrolambda:3.2.5'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
