--- a/realm-browser/build.gradle
+++ b/realm-browser/build.gradle
@@ -1,14 +1,15 @@
 apply plugin: 'com.android.library'
 apply plugin: 'me.tatarka.retrolambda'
+apply plugin: 'realm-android'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.1"
+    buildToolsVersion "23.0.2"
     defaultConfig {
         minSdkVersion 14
         targetSdkVersion 23
-        versionCode 7
-        versionName '0.0.8'
+        versionCode 11
+        versionName '0.0.12'
     }
     buildTypes {
         debug {
@@ -32,16 +33,22 @@ android {
     }
 }
 
+ext {
+    supportLibVersion = '23.1.1'
+    rxJavaVersion = '1.1.0'
+    rxLifecycle = '0.4.0'
+}
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.0.1'
-    compile 'com.android.support:recyclerview-v7:23.0.1'
-    compile 'com.jakewharton.rxbinding:rxbinding:0.2.0'
-    compile 'com.trello:rxlifecycle:0.3.0'
-    compile 'com.trello:rxlifecycle-components:0.3.0'
-    compile 'io.reactivex:rxandroid:1.0.1'
-    compile 'io.reactivex:rxjava:1.0.14'
-    compile 'io.realm:realm-android:0.82.2'
+    compile "com.android.support:appcompat-v7:$supportLibVersion"
+    compile "com.android.support:design:$supportLibVersion"
+    compile "com.android.support:recyclerview-v7:$supportLibVersion"
+    compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
+    compile "com.trello:rxlifecycle:$rxLifecycle"
+    compile "com.trello:rxlifecycle-components:$rxLifecycle"
+    compile "io.reactivex:rxandroid:$rxJavaVersion"
+    compile "io.reactivex:rxjava:$rxJavaVersion"
 }
 
 if(file('../../artifactory.gradle').exists()) {
